--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,32 @@
-<p>ICI FORMULAIRE DE CONNEXION</p>
+<mat-card>
+            <mat-card-title>
+              <mat-icon>account_circle</mat-icon>
+            </mat-card-title>
+      <mat-card-content>
+        <form [formGroup]="form" (ngSubmit)="submit()">
+          <p>
+            <mat-form-field>
+              <input type="text" matInput placeholder="Username" formControlName="username">
+            </mat-form-field>
+          </p>
+
+          <p>
+            <mat-form-field>
+              <input type="password" matInput placeholder="Password" formControlName="password">
+            </mat-form-field>
+          </p>
+
+          <p *ngIf="error" class="error">
+            {{ error }}
+          </p>
+
+        
+          <div class="button">
+            <button  type="submit" mat-raised-button color="primary">Login</button>
+          </div>
+
+        </form>
+      </mat-card-content>
+    </mat-card>
+
+    <ng-lottie [options]="options"></ng-lottie>
