ajout de navbar pour les pages

--- a/src/app/default-layout/default-layout.component.html
+++ b/src/app/default-layout/default-layout.component.html
@@ -1,3 +1,15 @@
+<nav class="navbar">
+  <a routerLink="/" class="logo">Mes Devoirs</a>
+  <div class="spacer"></div>
+  <ul class="nav-links">
+    <li><a routerLink="/home"><mat-icon>home</mat-icon> Acceuil</a></li>
+    <li><a routerLink="/add"><mat-icon>assignment</mat-icon>Assigner</a></li>
+    <li><a routerLink="/contact"><mat-icon>account_circle</mat-icon> Profil</a></li>
+  </ul>
+  <button class="logout-button">Logout</button>
+</nav>
+
+
 <h1>
   <nav>
       <a routerLink="/home">{{title}}</a>
