--- a/src/app/default-layout/default-layout.component.css
+++ b/src/app/default-layout/default-layout.component.css
@@ -1,8 +1,9 @@
+@import './../../styles.css';
 .navbar {
-  background-color: #50bfa5;
+  background-color: var(--green);
   color: #fff;
   display: flex;
-  align-items: center; 
+  align-items: center;
   padding: 0px 10px;
 }
 
@@ -19,7 +20,7 @@
 .nav-links {
   list-style: none;
   display: flex;
-  gap: 20px; 
+  gap: 20px;
 }
 
 .nav-links li a {
@@ -54,4 +55,7 @@
 
 .logout-button:hover {
   background-color: #eee;
+}
+.main{
+  margin: 10px;
 }
