--- a/src/app/assignments/assignments.component.css
+++ b/src/app/assignments/assignments.component.css
@@ -1,6 +1,7 @@
 .container {
     display:flex;
-    flex-direction:column;
+    flex-direction:row;
+    justify-content: space-evenly;
 }
 
 .ajouterBtn {
@@ -12,7 +13,7 @@
     width: 1600px;
     border: 1px solid black;
   }
-  
+
   .example-item {
     height: 150px;
   }
@@ -20,26 +21,109 @@
   .demo-table {
     width: 100%;
   }
-  
+
   .mat-column-id {
     width: 32px;
     border-right: 1px solid currentColor;
     padding-right: 24px;
     text-align: center;
   }
-  
+
   .mat-column-nom {
     padding-left: 16px;
     font-size: 20px;
   }
-  
+
   .mat-column-dateDeRendu {
     font-style: italic;
   }
-  
+
   .mat-column-rendu {
     width: 32px;
     text-align: center;
     font-weight: bold;
   }
-  
+
+
+  /* Drag and drop  */
+  .example-container {
+    width: 400px;
+    max-width: 100%;
+    margin: 0 25px 25px 0;
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  .example-list {
+    border: solid 1px #ccc;
+    min-height: 60px;
+    background: white;
+    border-radius: 4px;
+    overflow: hidden;
+    display: block;
+  }
+
+  .example-box {
+    padding: 20px 10px;
+    border-bottom: solid 1px #ccc;
+    color: rgba(0, 0, 0, 0.87);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    cursor: move;
+    background: white;
+    font-size: 14px;
+  }
+
+  .cdk-drag-preview {
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+                0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  }
+
+  .cdk-drag-placeholder {
+    opacity: 0;
+  }
+
+  .cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
+
+  .example-box:last-child {
+    border: none;
+  }
+
+  .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
+
+  .product-card {
+    display: flex;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+  }
+
+  .product-card-image {
+    flex: 0 0 200px;
+  }
+
+  .product-card-details {
+    flex: 1 1 auto;
+    background-color: #f5f5f5;
+  }
+
+  .product-card-header {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 8px;
+  }
+
+  .product-card-footer {
+    font-size: 14px;
+    color: #777777;
+  }
+
