--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,28 +4,23 @@
     <mat-icon>account_circle</mat-icon>
   </mat-card-title>
   <mat-card-content>
-    <form [formGroup]="form" (ngSubmit)="submit()">
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
       <p>
         <mat-form-field>
-          <input type="text" matInput placeholder="Username" formControlName="username">
+          <input type="email" matInput placeholder="Email" formControlName="email" required="true">
         </mat-form-field>
       </p>
-
       <p>
         <mat-form-field>
-          <input type="password" matInput placeholder="Password" formControlName="password">
+          <input type="password" matInput placeholder="Mot de passe" formControlName="mdp" required="true">
         </mat-form-field>
       </p>
-
-      <p *ngIf="error" class="error">
+      <!-- <p *ngIf="error" class="error">
         {{ error }}
-      </p>
-
-
+      </p> -->
       <div class="button">
         <button type="submit" mat-raised-button color="primary">Login</button>
       </div>
-
     </form>
   </mat-card-content>
 </mat-card>
