--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -39,10 +39,7 @@ mat-card-content {
 }
 
 .error {
-  padding: 16px;
-  width: 300px;
-  color: white;
-  background-color: red;
+  color: red;
 }
 
 .button {
