création d'une fonction pour la déconnexion

--- a/src/app/default-layout/default-layout.component.html
+++ b/src/app/default-layout/default-layout.component.html
@@ -6,7 +6,7 @@
     <li><a routerLink="/add"><mat-icon>assignment</mat-icon>Assigner</a></li>
     <li><a routerLink="/contact"><mat-icon>account_circle</mat-icon> Profil</a></li>
   </ul>
-  <button class="logout-button">Logout</button>
+  <button class="logout-button" (click)="logout()">Logout</button>
 </nav>
 
 <!-- old -->
