--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -3,26 +3,25 @@
   <div class="example-container">
     <h2>To do</h2>
 
-    <div
-      cdkDropList
-      #todoList="cdkDropList"
-      [cdkDropListData]="todo"
-      [cdkDropListConnectedTo]="[doneList]"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item.nom}}
-          <mat-card *cdkDragPreview class="product-card">
-            <div class="product-card-image">
-              <img mat-card-lg-image [src]="'../../assets/' + item.prof + '.jpg'" [alt]="item.matiere">
+    <div cdkDropList #todoList="cdkDropList" [cdkDropListData]="assignments" [cdkDropListConnectedTo]="[doneList]"
+      class="example-list" (cdkDropListDropped)="drop($event)">
+      <div class="example-box" *ngFor="let item of assignments" cdkDrag>
+        <mat-card class="product-card">
+          <mat-card-header>
+            <mat-card-subtitle>
+              Devoir : {{item.nom}}
+            </mat-card-subtitle>
+            <mat-card-subtitle>
+              Matière: {{item.matiere.nom}}
+            </mat-card-subtitle>
+            <mat-card-subtitle>
+              <small>à rendre le: {{item.dateDeRendu | date: 'dd/MM/yy'}}</small>
+            </mat-card-subtitle>
+            <div mat-card-avatar>
+              <img [src]="item.matiere.photoProf" [alt]="item.matiere.nom" class="avatar">
             </div>
-            <div class="product-card-details">
-              <mat-card-header class="product-card-header">{{item.nom}}</mat-card-header>
-              <mat-card-content>
-                <mat-card-subtitle>à rendre le: {{item.dateRendu}}</mat-card-subtitle>
-              </mat-card-content>
-              <mat-card-footer class="product-card-footer">Matière: {{item.matiere}}</mat-card-footer>
-            </div>
-          </mat-card>
+          </mat-card-header>
+        </mat-card>
       </div>
     </div>
   </div>
@@ -30,13 +29,26 @@
   <div class="example-container">
     <h2>Done</h2>
 
-    <div
-      cdkDropList
-      #doneList="cdkDropList"
-      [cdkDropListData]="done"
-      class="example-list"
+    <div cdkDropList #doneList="cdkDropList" [cdkDropListData]="assignmentsRendu" class="example-list"
       (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of done" cdkDrag>{{item.nom}}</div>
+      <div class="example-box" *ngFor="let item of assignmentsRendu" cdkDrag>
+        <mat-card class="product-card-done">
+          <mat-card-header>
+            <mat-card-subtitle>
+              Devoir : {{item.nom}}
+            </mat-card-subtitle>
+            <mat-card-subtitle>
+              Matière: {{item.matiere.nom}}
+            </mat-card-subtitle>
+            <mat-card-subtitle>
+              <small>à rendre le: {{item.dateDeRendu | date: 'dd/MM/yy'}}</small>
+            </mat-card-subtitle>
+            <div mat-card-avatar>
+              <img [src]="item.matiere.photoProf" [alt]="item.matiere.nom" class="avatar">
+            </div>
+          </mat-card-header>
+        </mat-card>
+      </div>
     </div>
   </div>
 </main>
@@ -60,7 +72,7 @@
       </button>
     </a>
   </nav> -->
-  <!-- <mat-divider></mat-divider>
+<!-- <mat-divider></mat-divider>
   <p>
     Nb assignments total {{totalDocs}}, par page {{limit}}, nbPages {{totalPages}}
   </p>
@@ -80,36 +92,36 @@
       Derniere page
     </button>
   </p> -->
-  <!-- <h1>Affichage avec data table</h1>
+<!-- <h1>Affichage avec data table</h1>
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Selection de la page des assigments"
     (page)="handlePage($event)" class="demo-paginator" [length]="totalPages" [pageSize]="limit" [pageIndex]="page">
   </mat-paginator>
   <table mat-table [dataSource]="assignments" class="mat-elevation-z8 demo-table"> -->
-    <!-- id Column -->
-    <!-- <ng-container matColumnDef="id">
+<!-- id Column -->
+<!-- <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> Id </th>
       <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container> -->
 
-    <!-- nom Column -->
-    <!-- <ng-container matColumnDef="nom">
+<!-- nom Column -->
+<!-- <ng-container matColumnDef="nom">
       <th mat-header-cell *matHeaderCellDef> Nom </th>
       <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
     </ng-container> -->
 
-    <!-- dateDeRendu Column -->
-    <!-- <ng-container matColumnDef="dateDeRendu">
+<!-- dateDeRendu Column -->
+<!-- <ng-container matColumnDef="dateDeRendu">
       <th mat-header-cell *matHeaderCellDef> Date de rendu </th>
       <td mat-cell *matCellDef="let element"> {{element.dateDeRendu}} </td>
     </ng-container> -->
 
-    <!-- rendu Column -->
-    <!-- <ng-container matColumnDef="rendu">
+<!-- rendu Column -->
+<!-- <ng-container matColumnDef="rendu">
       <th mat-header-cell *matHeaderCellDef> Rendu </th>
       <td mat-cell *matCellDef="let element"> {{element.rendu}} </td>
     </ng-container> -->
 
-    <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+<!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Selection de la page des assigments"
@@ -117,7 +129,7 @@
   </mat-paginator> -->
 
 
-  <!-- <h1>Affichage avec mat-list / mat-list-item</h1>
+<!-- <h1>Affichage avec mat-list / mat-list-item</h1>
   <mat-list *ngFor="let a of assignments">
     <a routerLink="/assignments/{{a.id}}">
       <h3 mat-subheader>Date limite: {{a.dateDeRendu | date: 'dd/MM/yy'}}</h3>
