--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -4,8 +4,8 @@
     <h2>To do</h2>
 
     <div cdkDropList #todoList="cdkDropList" [cdkDropListData]="assignments" [cdkDropListConnectedTo]="[doneList]"
-      class="example-list" (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of assignments" cdkDrag>
+      class="example-list" (cdkDropListDropped)="drop($event)" >
+      <div class="example-box" *ngFor="let item of assignments" cdkDrag (cdkDragExited)="openModal(item)">
         <mat-card class="product-card">
           <mat-card-header>
             <mat-card-subtitle>
@@ -31,7 +31,7 @@
 
     <div cdkDropList #doneList="cdkDropList" [cdkDropListData]="assignmentsRendu" class="example-list"
       (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of assignmentsRendu" cdkDrag>
+      <div class="example-box" *ngFor="let item of assignmentsRendu">
         <mat-card class="product-card-done">
           <mat-card-header>
             <mat-card-subtitle>
