--- a/src/app/assignments/modal.component.html
+++ b/src/app/assignments/modal.component.html
@@ -1,15 +1,19 @@
-<h2 mat-dialog-title>Add Note</h2>
-<mat-dialog-content>
-  <mat-form-field>
-    <mat-label>Note</mat-label>
-    <input matInput [(ngModel)]="note" placeholder="Enter note" required>
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label>Remarks</mat-label>
-    <input matInput [(ngModel)]="remarks" placeholder="Enter remarks">
-  </mat-form-field>
+<h2 mat-dialog-title>Rendre {{data.nom}}</h2>
+<mat-dialog-content [formGroup]="noteForm">
+  <div class="form-group">
+    <mat-form-field>
+      <mat-label>Note</mat-label>
+      <input matInput formControlName="note" type="number" placeholder="Ajouter une note" required>
+    </mat-form-field>
+  </div>
+  <div class="form-group">
+    <mat-form-field>
+      <mat-label>Remarks</mat-label>
+      <input matInput formControlName="remarks" placeholder="Remarque">
+    </mat-form-field>
+  </div>
 </mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button (click)="onCancel()">Cancel</button>
-  <button mat-button color="primary" (click)="onConfirm()">Confirm</button>
+<mat-dialog-actions>
+  <button mat-button (click)="onCancel()">Annuler</button>
+  <button mat-button color="primary" (click)="onConfirm()" [disabled]="noteForm.invalid">Rendre</button>
 </mat-dialog-actions>
