Dynamisation eleves pour la création assignment, integration api

--- a/src/app/assignments/add-assignment/add-assignment.component.css
+++ b/src/app/assignments/add-assignment/add-assignment.component.css
@@ -34,3 +34,10 @@ button{
   margin: 10px;
   color: white !important;
 }
+
+.btn-submit{
+  text-align: right;
+}
+.btn-submit button{
+  background-color: var(--green) !important;
+}
