--- a/src/app/assignments/add-assignment/add-assignment.component.html
+++ b/src/app/assignments/add-assignment/add-assignment.component.html
@@ -8,7 +8,11 @@
           <ng-template matStepLabel>Devoir</ng-template>
           <mat-form-field>
             <mat-label>Titre</mat-label>
-            <input matInput placeholder="Titre du devoir" formControlName="firstCtrl" required>
+            <input matInput [(ngModel)]="nomDevoir" placeholder="Titre du devoir"
+              formControlName="nomDevoir" required>
+            <mat-error *ngIf="firstFormGroup.controls['nomDevoir'].hasError('required') && submit">
+              Le titre du devoir est requis
+            </mat-error>
           </mat-form-field>
           <div>
             <button mat-button matStepperNext>Next</button>
@@ -21,12 +25,18 @@
           <div class="form-container">
             <mat-form-field>
               <mat-label>Matière</mat-label>
-              <mat-select (valueChange)="changeMatiere($event)">
+              <mat-select (valueChange)="changeMatiere($event)"
+                formControlName="matiere" [(ngModel)]="matiere"
+              >
                 <mat-option *ngFor="let mat of matieres" [value]="mat._id" >
                   {{mat.nom}}
                 </mat-option>
               </mat-select>
             </mat-form-field>
+            <mat-error *ngIf="secondFormGroup.controls['matiere'].hasError('required') && submit">
+              Veuillez sélectionner une matière
+            </mat-error>
+
             <div class="image-container me-2" *ngIf="matiereSelected">
               <img [src]="matiereSelected.photo" mat-card-md-image>
             </div>
@@ -34,8 +44,9 @@
               <p>Professeur: </p>
             </div>
             <div class="image-container" *ngIf="matiereSelected">
-              <img [src]="matiereSelected?.photoProf" mat-card-md-image>
+              <img [src]="matiereSelected.photoProf" mat-card-md-image>
             </div>
+
           </div>
           <div class="button-container">
             <button mat-button matStepperPrevious>Back</button>
@@ -43,20 +54,34 @@
           </div>
         </form>
       </mat-step>
-      
-      <mat-step [stepControl]="thirdFormGroup" label="Date de rendu">
+
+
+      <mat-step [stepControl]="thirdFormGroup" label="Elève">
         <form [formGroup]="thirdFormGroup">
-          <mat-form-field appearance="fill">
-            <mat-label>Date de rendu</mat-label>
-            <input matInput [matDatepicker]="picker" formControlName="dateDeRendu" [(ngModel)]="dateDeRendu" name="date" required>
-            <mat-hint>MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
+          <div class="form-container">
+            <mat-form-field>
+              <mat-label>Elève</mat-label>
+              <mat-select (valueChange)="changeEleve($event)" formControlName="eleve" [(ngModel)]="eleve">
+                <mat-option *ngFor="let mat of eleves" [value]="mat._id" >
+                  {{mat.nom}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-error *ngIf="thirdFormGroup.controls['eleve'].hasError('required') && submit">
+              Veuillez sélectionner un élève
+            </mat-error>
+
+            <div class="image-container me-2" *ngIf="eleveSelected">
+              <img [src]="eleveSelected.photo" mat-card-md-image>
+            </div>
+          </div>
         </form>
         <div>
           <button mat-button matStepperPrevious>Back</button>
           <button mat-button (click)="stepper.reset()">Reset</button>
+        </div>
+        <div class="btn-submit">
+          <button mat-button  color="success" (click)="onSubmit()">Enregistrer</button>
         </div>
       </mat-step>
     </mat-stepper>
