Ajout d'un snack bar pour les messages d'erreurs et succès

--- a/src/app/assignments/add-assignment/add-assignment.component.css
+++ b/src/app/assignments/add-assignment/add-assignment.component.css
@@ -41,3 +41,15 @@ button{
 .btn-submit button{
   background-color: var(--green) !important;
 }
+
+/* Success Snackbar Styles */
+.success-snackbar {
+  background-color: green;
+  color: white;
+}
+
+/* Error Snackbar Styles */
+.error-snackbar {
+  background-color: red!important;
+  color: white;
+}
