--- a/src/app/assignments/assignments.component.css
+++ b/src/app/assignments/assignments.component.css
@@ -9,8 +9,8 @@
 }
 
 .example-viewport {
-    height: 600px;
-    width: 1600px;
+    height: 700px;
+    width: 100%;
     border: 1px solid black;
   }
 
