--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -1,167 +1,60 @@
-<!-- Drag and drop -->
-<main class="container">
-  <div class="example-container">
-    <h2>To do</h2>
+<cdk-virtual-scroll-viewport itemSize="50" class="example-viewport" #scroller style="margin: auto;">
+  <!-- Drag and drop -->
+  <main class="container">
+    <div class="example-container">
+      <h2>To do</h2>
 
-    <div cdkDropList #todoList="cdkDropList" [cdkDropListData]="assignments" [cdkDropListConnectedTo]="[doneList]"
-      class="example-list" (cdkDropListDropped)="drop($event)" >
-      <div class="example-box" *ngFor="let item of assignments" cdkDrag (cdkDragExited)="openModal(item)">
-        <mat-card class="product-card">
-          <mat-card-header>
-            <mat-card-subtitle>
-              Devoir : {{item.nom}}
-            </mat-card-subtitle>
-            <mat-card-subtitle>
-              Matière: {{item.matiere.nom}}
-            </mat-card-subtitle>
-            <mat-card-subtitle>
-              <small>à rendre le: {{item.dateDeRendu | date: 'dd/MM/yy'}}</small>
-            </mat-card-subtitle>
-            <div mat-card-avatar>
-              <img [src]="item.matiere.photoProf" [alt]="item.matiere.nom" class="avatar">
-            </div>
-          </mat-card-header>
-        </mat-card>
+      <div cdkDropList #todoList="cdkDropList" [cdkDropListData]="assignments" [cdkDropListConnectedTo]="[doneList]"
+        class="example-list" (cdkDropListDropped)="drop($event)" >
+        <div class="example-box" *ngFor="let item of assignments" cdkDrag (cdkDragExited)="openModal(item)">
+          <mat-card class="product-card">
+            <mat-card-header>
+              <mat-card-subtitle>
+                Devoir : {{item.nom}}
+              </mat-card-subtitle>
+              <mat-card-subtitle>
+                Matière: {{item.matiere.nom}}
+              </mat-card-subtitle>
+              <mat-card-subtitle>
+                <small>à rendre le: {{item.dateDeRendu | date: 'dd/MM/yy'}}</small>
+              </mat-card-subtitle>
+              <div mat-card-avatar>
+                <img [src]="item.matiere.photoProf" [alt]="item.matiere.nom" class="avatar">
+              </div>
+            </mat-card-header>
+          </mat-card>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="example-container">
-    <h2>Done</h2>
+    <div class="example-container">
+      <h2>Done</h2>
 
-    <div cdkDropList #doneList="cdkDropList" [cdkDropListData]="assignmentsRendu" class="example-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of assignmentsRendu">
-        <mat-card class="product-card-done">
-          <mat-card-header>
-            <mat-card-subtitle>
-              Devoir : {{item.nom}}
-            </mat-card-subtitle>
-            <mat-card-subtitle>
-              Matière: {{item.matiere.nom}}
-            </mat-card-subtitle>
-            <mat-card-subtitle>
-              <small>à rendre le: {{item.dateDeRendu | date: 'dd/MM/yy'}}</small>
-            </mat-card-subtitle>
-            <div mat-card-avatar>
-              <img [src]="item.matiere.photoProf" [alt]="item.matiere.nom" class="avatar">
-            </div>
-          </mat-card-header>
-        </mat-card>
+      <div cdkDropList #doneList="cdkDropList" [cdkDropListData]="assignmentsRendu" class="example-list"
+        (cdkDropListDropped)="drop($event)">
+        <div class="example-box" *ngFor="let item of assignmentsRendu">
+          <mat-card class="product-card-done">
+            <mat-card-header>
+              <mat-card-subtitle>
+                Devoir : {{item.nom}}
+              </mat-card-subtitle>
+              <mat-card-subtitle>
+                Matière: {{item.matiere.nom}}
+              </mat-card-subtitle>
+              <mat-card-subtitle>
+                <small>à rendre le: {{item.dateDeRendu | date: 'dd/MM/yy'}}</small>
+              </mat-card-subtitle>
+              <div mat-card-avatar>
+                <img [src]="item.matiere.photoProf" [alt]="item.matiere.nom" class="avatar">
+              </div>
+            </mat-card-header>
+          </mat-card>
+        </div>
       </div>
     </div>
-  </div>
-</main>
+  </main>
+</cdk-virtual-scroll-viewport>
 
 
 
 
-
-
-
-
-
-
-<!-- OLD -->
-<!-- <h2>{{titre}}</h2>
-
-<main class="container">
-  <nav class="ajouterBtn">
-    <a routerLink="/add">
-      <button mat-flat-button color="accent"> Ajouter Assignment
-      </button>
-    </a>
-  </nav> -->
-<!-- <mat-divider></mat-divider>
-  <p>
-    Nb assignments total {{totalDocs}}, par page {{limit}}, nbPages {{totalPages}}
-  </p>
-  <p>
-    Régler nb par page :
-    <input type="range" min=1 max=100 value=10 [(ngModel)]="limit" (change)="getAssignments()" /> {{limit}}
-  </p>
-  <p>
-    <button (click)="premierePage()" [disabled]="!hasPrevPage">
-      Première page
-    </button>
-    <button (click)="pagePrecedente()" [disabled]="!hasPrevPage">
-      Page Précédente
-    </button>
-    <button (click)="pageSuivante()" [disabled]="!hasNextPage">Page Suivante</button>
-    <button (click)="dernierePage()" [disabled]="!hasNextPage">
-      Derniere page
-    </button>
-  </p> -->
-<!-- <h1>Affichage avec data table</h1>
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Selection de la page des assigments"
-    (page)="handlePage($event)" class="demo-paginator" [length]="totalPages" [pageSize]="limit" [pageIndex]="page">
-  </mat-paginator>
-  <table mat-table [dataSource]="assignments" class="mat-elevation-z8 demo-table"> -->
-<!-- id Column -->
-<!-- <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> Id </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container> -->
-
-<!-- nom Column -->
-<!-- <ng-container matColumnDef="nom">
-      <th mat-header-cell *matHeaderCellDef> Nom </th>
-      <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
-    </ng-container> -->
-
-<!-- dateDeRendu Column -->
-<!-- <ng-container matColumnDef="dateDeRendu">
-      <th mat-header-cell *matHeaderCellDef> Date de rendu </th>
-      <td mat-cell *matCellDef="let element"> {{element.dateDeRendu}} </td>
-    </ng-container> -->
-
-<!-- rendu Column -->
-<!-- <ng-container matColumnDef="rendu">
-      <th mat-header-cell *matHeaderCellDef> Rendu </th>
-      <td mat-cell *matCellDef="let element"> {{element.rendu}} </td>
-    </ng-container> -->
-
-<!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Selection de la page des assigments"
-    (page)="handlePage($event)" class="demo-paginator" [length]="totalPages" [pageSize]="limit" [pageIndex]="page">
-  </mat-paginator> -->
-
-
-<!-- <h1>Affichage avec mat-list / mat-list-item</h1>
-  <mat-list *ngFor="let a of assignments">
-    <a routerLink="/assignments/{{a.id}}">
-      <h3 mat-subheader>Date limite: {{a.dateDeRendu | date: 'dd/MM/yy'}}</h3>
-      <mat-list-item>
-        <p appRendu *ngIf="a.rendu; else nonsoumis">
-          {{a.nom}} id = {{a._id}}
-        </p>
-        <ng-template #nonsoumis>
-          {{a.nom}} NON RENDU id = {{a._id}}
-        </ng-template>
-      </mat-list-item>
-      <mat-divider></mat-divider>
-    </a>
-  </mat-list>
-
-
-  <h1>Exemple de scrolling virtuel infini</h1>
-  <cdk-virtual-scroll-viewport itemSize="50" class="example-viewport" #scroller>
-    <mat-list *cdkVirtualFor="let a of assignments">
-      <a routerLink="/assignments/{{a.id}}">
-        <h3 mat-subheader>Date limite: {{a.dateDeRendu | date: 'dd/MM/yy'}}</h3>
-        <mat-list-item>
-          <p appRendu *ngIf="a.rendu; else nonsoumis">
-            {{a.nom}} id = {{a._id}}
-          </p>
-          <ng-template #nonsoumis>
-            {{a.nom}} NON RENDU id = {{a._id}}
-          </ng-template>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-      </a>
-    </mat-list>
-  </cdk-virtual-scroll-viewport>
-
-</main> -->
