Ajout du css(couleur) pour le snackbar

--- a/src/app/default-layout/default-layout.component.html
+++ b/src/app/default-layout/default-layout.component.html
@@ -2,7 +2,7 @@
   <a routerLink="/" class="logo">Mes Devoirs</a>
   <div class="spacer"></div>
   <ul class="nav-links">
-    <li><a routerLink="/home"><mat-icon>home</mat-icon> Acceuil</a></li>
+    <li><a routerLink="/home"><mat-icon>home</mat-icon> Accueil</a></li>
     <li><a routerLink="/add"><mat-icon>assignment</mat-icon>Assigner</a></li>
     <li><a routerLink="/contact"><mat-icon>account_circle</mat-icon> Profil</a></li>
   </ul>
