--- a/src/app/assignments/add-assignment/add-assignment.component.css
+++ b/src/app/assignments/add-assignment/add-assignment.component.css
@@ -42,14 +42,14 @@ button{
   background-color: var(--green) !important;
 }
 
-/* Success Snackbar Styles */
-.success-snackbar {
-  background-color: green;
-  color: white;
+
+/* Style local */
+::ng-deep .success-snackbar {
+  background-color: #50bfa5!important; /* Couleur de fond en cas de succès */
+  color: #000000!important; /* Couleur du texte en cas de succès */
 }
 
-/* Error Snackbar Styles */
-.error-snackbar {
-  background-color: red!important;
-  color: white;
+::ng-deep .error-snackbar {
+  background-color: #CB2823!important; /* Couleur de fond en cas d'erreur */
+  color: #ffffff!important; /* Couleur du texte en cas d'erreur */
 }
