--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,17 @@
 }
 html, body { height: 100%; }
 body { margin: 120; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.success-snackbar {
+  color: white;
+  --mdc-snackbar-container-color: var(--success-color);
+  --mat-mdc-snack-bar-button-color: var(--white-color);
+}
+
+.error-snackbar {
+  max-width: max-content !important;
+  color: white;
+  --mdc-snackbar-container-color: var(--delete-color);
+  border-color: #f5c6cb;
+  --mat-mdc-snack-bar-button-color: var(--white-color);
+}
