--- a/src/app/assignments/assignment-detail/assignment-detail.component.css
+++ b/src/app/assignments/assignment-detail/assignment-detail.component.css
@@ -3,3 +3,76 @@
     align-items: flex-end;
     justify-content: space-between;
 }
+main{
+  display: flex;
+  justify-content: center;
+}
+.example-card {
+  width: 400px;
+  margin: 20px;
+  position: relative;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.avatar-container {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+mat-card-image {
+  height: 200px;
+  object-fit: cover;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+mat-card-content {
+  padding-top: 10px;
+}
+
+ul {
+  list-style-type: disclosure-closed;
+  color: var(--green);
+  padding: 0;
+}
+
+li {
+  margin-bottom: 8px;
+  font-size: 14px;
+}
+
+mat-card-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  border-top: 1px solid var(--green);
+  border-bottom: 1px solid var(--green);
+
+}
+
+.date-container {
+  font-size: 12px;
+  color: #888888;
+}
+
+mat-checkbox {
+  margin-right: 10px;
+  color: #3f51b5;
+}
+
+.mat-mdc-card-header {
+  display: flex;
+  padding: 16px 16px !important;
+  background-color: var(--blue);
+}
